# grist-mailmerge

./: README.md  example.yml  pyproject.toml
.basedpyright/: baseline.json
.github/workflows/: ci.yml
grist_mailmerge/: cli.py
