[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grist-mailmerge"
version = "2023.1"
authors = [
    {name = "Andreas Kloeckner", email = "inform@tiker.net"},
]
description = "Email merge for Grist databases, configured by YAML"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pygrist_mini ~=2025.1.1",
    "saneyaml ~=0.6.1",
    "jinja2 ~=3.1.2",
    "pydantic ~=2.11.9",
]

[project.scripts]
grist-mailmerge = "grist_mailmerge.cli:main"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pycodestyle
    "TC",
    "SIM",
]
extend-ignore = [
    "C90",  # McCabe complexity
    "E221", # multiple spaces before operator
    "E226", # missing whitespace around arithmetic operator
    "E402", # module-level import not at top of file
    "UP031", # use f-strings instead of %
    "UP032", # use f-strings instead of .format
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-local-folder = [
    "pytools",
]
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]


[tool.basedpyright]
reportImplicitStringConcatenation = "none"
reportUnusedCallResult = "none"

exclude = [
    "build",
    ".venv",
]

pythonVersion = "3.12"
pythonPlatform = "All"


